--- a/pom.xml
+++ b/pom.xml
@@ -41,12 +41,6 @@
 			<version>2.0</version>
 		</dependency>
 		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>9.4.1211</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
 			<groupId>org.mindrot</groupId>
 			<artifactId>jbcrypt</artifactId>
 			<version>0.3m</version>
@@ -61,6 +55,12 @@
 			<artifactId>mockito-core</artifactId>
 			<version>2.2.17</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>hana</groupId>
+			<artifactId>com.sap</artifactId>
+			<version>1.0</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 	<build>
