--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.7.21</version>
+			<version>1.7.22</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.velocity</groupId>
@@ -61,6 +61,11 @@
 			<artifactId>mockito-core</artifactId>
 			<version>2.2.17</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.22</version>
 		</dependency>
 	</dependencies>
 	<build>
